--- a/help/using/docs-updates/docs-2016.md
+++ b/help/using/docs-updates/docs-2016.md
@@ -1,6 +1,6 @@
 ---
-description: liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui pourraient ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
-seo-description: liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui pourraient ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
+description: Liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Comprend des mises à jour ou des modifications mineures du guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
+seo-description: Liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Comprend des mises à jour ou des modifications mineures du guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
 seo-title: Mises à jour de la documentation 2016
 solution: Audience Manager
 title: Mises à jour de la documentation 2016
@@ -17,9 +17,9 @@ ht-degree: 26%
 
 # Mises à jour de la documentation 2016 {#documentation-updates}
 
-liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui pourraient ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
+Liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2016. Comprend des mises à jour ou des modifications mineures du guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
 
-## December, 2016 {#dec-16}
+## Décembre 2016 {#dec-16}
 
 <table id="table_D16570793032445FBC18F662BF9DDA7A"> 
  <thead> 
@@ -38,12 +38,12 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
    <td colname="col2"> <p>Révision afin d'inclure de nouvelles informations, de clarifier et de mettre en forme les choses. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../dil/dil-use-cases.md#traffic-dil-gtm"> Trafic DIL dans Google Tag Manager (GTM) </a> </p> </td> 
-   <td colname="col2"> <p>Après une mise à jour de Google en mai 2016, vous pouvez charger le code DIL dans la section HTML personnalisée d’une balise . Il n’est plus nécessaire d’héberger le code à distance. </p> </td> 
+   <td colname="col1"> <p> <a href="../dil/dil-use-cases.md#traffic-dil-gtm"> DIL de trafic dans Google Tag Manager (GTM)  </a> </p> </td> 
+   <td colname="col2"> <p>Après une mise à jour de Google en mai 2016, vous pouvez charger du code de DIL dans la section HTML personnalisée d’une balise . Il n’est plus nécessaire d’héberger le code à distance. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-data-collection.md"> FAQ sur la collecte de données et l’intégration de produit </a> </p> </td> 
-   <td colname="col2"> <p>Inclut une nouvelle entrée sur les adresses IP et FTP <span class="keyword"> d’Audience Manager</span> répertoriées en blanc. </p> </td> 
+   <td colname="col2"> <p>Inclut une nouvelle entrée sur la liste blanche <span class="keyword"> Audience Manager</span> adresses IP et FTP. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-privacy.md"> FAQ sur la rétention des données et la confidentialité </a> </p> </td> 
@@ -55,12 +55,12 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../dil/dil-modules.md#ga-submit-universal-analytics"> GA.submitUniversalAnalytics </a> </p> </td> 
-   <td colname="col2"> <p>Documentation décrivant une nouvelle méthode DIL qui vous permet d’envoyer des données à <span class="keyword"> l’Audience Manager</span> à partir de Google Universal Analytics. </p> </td> 
+   <td colname="col2"> <p>Documentation décrivant une nouvelle méthode de DIL qui vous permet d’envoyer des données à <span class="keyword"> Audience Manager</span> à partir d’Universal Analytics de Google. </p> </td> 
   </tr> 
  </tbody> 
 </table>
 
-## November, 2016 {#nov-16}
+## Novembre 2016 {#nov-16}
 
 <table id="table_D83514BA7F5745DA80D6135804D5BD5F"> 
  <thead> 
@@ -72,7 +72,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <a href="../reference/visitor-authentication-states.md"> États d’authentification du visiteur dans Audience Manager </a> </td> 
-   <td colname="col2"> <span class="keyword"> L’Audience Manager</span> traite les états d’authentification de l’ID de visiteur <code> UNKNOWN</code> et <code> LOGGED_OUT</code> de la même manière. Le document fournit plus d'informations sur la façon dont nous traitons les appels <code> setCustomerID</code> événements. </td> 
+   <td colname="col2"> <span class="keyword"> Audience </span> Manager gère les états d’authentification de l’ID de visiteur  <code> UNKNOWN</code> et  <code> LOGGED_OUT</code> de la même manière. Le document fournit plus d'informations sur la façon dont nous gérons les appels de événement <code> setCustomerID</code>. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../reference/cid.md"> CID remplace DPID et DPUUID </a> </td> 
@@ -80,28 +80,28 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/ids-in-aam.md"> Index des identifiants dans Audience Manager </a> </p> </td> 
-   <td colname="col2"> <p>Reportez-vous à ce document pour obtenir une liste complète des identifiants d’ <span class="keyword"> Audience Manager</span> . </p> </td> 
+   <td colname="col2"> <p>Consultez ce document pour obtenir une liste complète des <span class="keyword"> identifiants d'Audience Manager</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-audience-lab.md"> FAQ sur Audience Lab </a> </p> </td> 
-   <td colname="col2"> <p>Frequently asked questions about the <span class="wintitle"> Audience Lab</span> feature. </p> </td> 
+   <td colname="col2"> <p>Questions fréquentes sur la fonction <span class="wintitle"> Audience Lab</span>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/addressable-audiences.md#date-ranges"> Plages de dates dans les Audiences et destinations adressables </a> </p> </td> 
-   <td colname="col2"> <p>Nouveau contenu qui décrit le fonctionnement des intervalles de temps pour les Audiences <span class="wintitle"></span> adressables et les <span class="wintitle"> Destinations</span>. </p> </td> 
+   <td colname="col1"> <p> <a href="../features/addressable-audiences.md#date-ranges"> Plages de dates dans les Audiences et destinations adressables  </a> </p> </td> 
+   <td colname="col2"> <p>Nouveau contenu qui décrit le fonctionnement des intervalles de temps pour les <span class="wintitle"> Audiences adressables</span> et les <span class="wintitle"> Destinations</span>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/addressable-audiences.md#addressable-audience-metrics"> Mesures d'Audience adressables </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../features/addressable-audiences.md#addressable-audience-metrics"> Mesures d'Audience adressables  </a> </p> </td> 
    <td colname="col2"> <p>Description mise à jour des nouvelles mesures de rapport et des mesures de rapport révisées. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/destinations/destinations-home.md"> Page d’accueil des destinations </a> </p> </td> 
-   <td colname="col2"> <p>Nouveau contenu qui décrit les fonctionnalités du landing page <span class="wintitle"> Destinations</span> . </p> </td> 
+   <td colname="col2"> <p>Nouveau contenu décrivant les fonctionnalités du landing page <span class="wintitle"> Destinations</span>. </p> </td> 
   </tr> 
  </tbody> 
 </table>
 
-## October, 2016 {#oct-16}
+## Octobre 2016 {#oct-16}
 
 <table id="table_B19586DBA5D44F8E9D06610DB704EFB9"> 
  <thead> 
@@ -113,7 +113,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <a href="../integration/receiving-audience-data/real-time-outbound-transfers/oauth-in-outbound-transfers.md"> Intégration OAuth 2.0 pour les transferts sortants en temps réel </a> </td> 
-   <td colname="col2">Ajouté la capacité de sécuriser votre transfert de données sortantes en temps réel via le protocole OAuth 2.0. Contactez votre consultant <span class="keyword"> en Adobe Audience Manager</span> pour commencer. </td> 
+   <td colname="col2">Ajouté la capacité de sécuriser votre transfert de données sortant en temps réel via le protocole OAuth 2.0. Contactez votre <span class="keyword"> consultant Adobe Audience Manager</span> pour commencer. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/algorithmic-models/understanding-models.md"> Modèles algorithmiques </a> </p> </td> 
@@ -124,7 +124,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
    <td colname="col2"> <p>Correction de noms d’en-tête incorrects fournis dans la pièce jointe du courrier électronique de désactivation. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/declared-ids.md#declared-id-variables"> Variables d’ID déclarées </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../features/declared-ids.md#declared-id-variables"> Variables d’ID déclarées  </a> </p> </td> 
    <td colname="col2"> <p>Correction d’un lien rompu vers la documentation du service d’ID. </p> </td> 
   </tr> 
   <tr> 
@@ -141,12 +141,12 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/profile-merge-rules/merge-rule-definitions.md"> Définition des options des stratégies de fusion de profils </a> </p> </td> 
-   <td colname="col2"> <p>Révision afin d’inclure plus d’informations sur la coopération <span class="keyword"> de périphériques d’</span>Adobe Experience Cloud. </p> </td> 
+   <td colname="col2"> <p>Révision afin d’inclure plus d’informations sur la <span class="keyword"> Adobe Experience Cloud Device Co-op</span>. </p> </td> 
   </tr> 
  </tbody> 
 </table>
 
-## September, 2016 {#sept-16}
+## septembre 2016 {#sept-16}
 
 <table id="table_9B18916DD43E4DB38C0C340DE4E3DF62"> 
  <thead> 
@@ -166,7 +166,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../dil/dil-overview.md"> Présentation de Data Integration Library (DIL) </a> </td> 
-   <td colname="col2">Présentation générale de la bibliothèque <span class="wintitle"> d’informations</span> de données (DIL). </td> 
+   <td colname="col2">Présentation générale de la <span class="wintitle"> Bibliothèque d'informations sur les données</span> (DIL). </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-file-contents.md"> Contenu du fichier de données entrant : syntaxe, caractères non valides, variables et exemples </a> </td> 
@@ -181,13 +181,13 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
    <td colname="col2"> <p> L’Audience Manager utilise l’heure universelle coordonnée (UTC) dans toute son interface utilisateur. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../api/api-swagger-migration.md"> Migration du code d’API </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../api/api-swagger-migration.md"> Migration du code d’API  </a> </p> </td> 
    <td colname="col2"> <p>Liens Ajoutés vers les API de groupe de tests de segment et l’API de requête de flux de données. </p> </td> 
   </tr> 
  </tbody> 
 </table>
 
-## August, 2016 {#aug-16}
+## Août 2016 {#aug-16}
 
 <table id="table_50CD90671E4B4C50A624AC0948FA8324"> 
  <thead> 
@@ -207,23 +207,23 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../integration/receiving-audience-data/real-time-outbound-transfers/digitally-signed-http-requests.md"> Requêtes HTTP signées numériquement </a> </td> 
-   <td colname="col2"> <p>document expliquant pourquoi et comment chiffrer les requêtes HTTP serveur à serveur. </p> </td> 
+   <td colname="col2"> <p>Document expliquant pourquoi et comment chiffrer les requêtes HTTP serveur à serveur. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../features/traits/trait-device-targeting.md"> Ciblage des périphériques à l’aide de clés au niveau des plateformes </a> </td> 
-   <td colname="col2"> <p>Ajouté une liste téléchargeable des clés de périphérique les plus courantes, selon les mesures Device Atlas. </p> </td> 
+   <td colname="col2"> <p>Ajouté une liste téléchargeable des clés de périphérique les plus courantes, selon les mesures de Device Atlas. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../api/dcs-intro/dcs-api-reference/dcs-error-codes.md"> Codes, messages et exemples d’erreur des serveurs de collecte de données </a> </td> 
    <td colname="col2"> <p>Ajouté de nouveaux codes d’erreur orientés vers le client à l’index. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../dil/dil-instance-methods.md#securedatacollection"> secureDataCollection </a> </p> </td> 
-   <td colname="col2"> <p>Contrôlez comment DIL effectue des appels de collecte de données avec HTTP ou HTTPS. </p> </td> 
+   <td colname="col1"> <p> <a href="../dil/dil-instance-methods.md#securedatacollection"> secureDataCollection  </a> </p> </td> 
+   <td colname="col2"> <p>Contrôlez comment le DIL effectue des appels de collecte de données avec HTTP ou HTTPS. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-api.md"> FAQ sur l’API </a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour du contenu expliquant pourquoi DIL utilise <code> GET</code> et <code> POST</code> des méthodes pour envoyer des données dans un appel de événement. </p> </td> 
+   <td colname="col2"> <p>Mise à jour du contenu expliquant pourquoi le DIL utilise les méthodes <code> GET</code> et <code> POST</code> pour envoyer des données dans un appel de événement. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/receiving-audience-data/real-time-outbound-transfers/real-time-outbound-transfers.md"> Transferts de données sortantes en temps réel </a> </p> </td> 
@@ -232,7 +232,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </tbody> 
 </table>
 
-## July, 2016 {#july-16}
+## Juillet 2016 {#july-16}
 
 <table id="table_183F245818BC4CF5AAB9B610C1BE4A9F"> 
  <thead> 
@@ -243,7 +243,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <a href="../reporting/onboarding-status-report.md#onboarding-status-about"> Rapport d'état de l'intégration : A propos </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../reporting/onboarding-status-report.md#onboarding-status-about"> Rapport d'état de l'intégration : A propos  </a> </p> </td> 
    <td colname="col2"> <p>Documentation révisée pour la reconception de l’interface utilisateur. </p> </td> 
   </tr> 
   <tr> 
@@ -252,11 +252,11 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/audience-optimization-reports.md"> Rapports d’Audience Optimization</a> </p> </td> 
-   <td colname="col2"> <p>Updated the <span class="wintitle"> Audience Optimization</span>reports with Cross Channel Conversion, Role-Based Access Control, Conversion Groups, and the Reported Conversion Traits report. </p> </td> 
+   <td colname="col2"> <p>Mise à jour des rapports <span class="wintitle"> Audience Optimization</span>avec les rapports Conversion entre Canaux, Contrôle d'accès basé sur les rôles, Groupes de conversion et Caractéristiques de conversion reportées. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/aor-advertisers/cross-channel-conversion-reporting.md"> Conversion inter-canaux </a> </p> </td> 
-   <td colname="col2"> <p>The <span class="wintitle"> Cross Channel Conversion</span> option in the <span class="wintitle"> Audience Optimization</span> reports allows you to attribute offline conversions to served online impressions or clicks. </p> </td> 
+   <td colname="col2"> <p>L'option <span class="wintitle"> Conversion entre Canaux</span> des rapports <span class="wintitle"> Audience Optimization</span> vous permet d'attribuer des conversions hors ligne aux impressions ou clics en ligne diffusés. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/aor-advertisers/reported-conversion-traits.md"> Caractéristiques de conversion rapportées </a> </p> </td> 
@@ -273,7 +273,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </tbody> 
 </table>
 
-## June, 2016 {#june-16}
+## Juin 2016 {#june-16}
 
 <table id="table_E71252DF328F42A3AB0BD2CA7DC5A549"> 
  <thead> 
@@ -285,7 +285,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <p> Transfert côté serveur </p> </td> 
-   <td colname="col2"> <p>Retiré de la documentation sur les <span class="keyword"> Audiences Manager</span> en septembre 2017. Déplacé vers la documentation <span class="keyword"> Analytics</span> . </p> </td> 
+   <td colname="col2"> <p>Retrait de la documentation <span class="keyword"> Audience Manager</span> en septembre 2017. Déplacé vers la documentation <span class="keyword"> Analytics</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/media-data-integration/impression-data-pixels.md"> Capture des données d’impression de campagne via des appels de pixel </a> </p> </td> 
@@ -293,7 +293,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/beta-environment.md"> Environnement bêta </a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour des noms d’hôte du serveur de collecte de données, de l’interface utilisateur et de l’API. </p> </td> 
+   <td colname="col2"> <p>Mise à jour des noms d’hôte DCS, UI et API. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/rest-api-main/aam-api-getting-started.md#api-urls"> URL des API </a> </p> </td> 
@@ -350,7 +350,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/traits/trait-comparison-operators.md"> Utilisation d’opérateurs de comparaison dans TraitBuilder </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../features/traits/trait-comparison-operators.md"> Utilisation d’opérateurs de comparaison dans TraitBuilder  </a> </p> </td> 
    <td colname="col2"> <p>Ajouté un nouvel opérateur nommé <code> Matcheswords</code>. Vous permet de spécifier des modèles de mots correspondants sans utiliser d’expression régulière. </p> </td> 
   </tr> 
  </tbody> 
@@ -368,11 +368,11 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-providers/marketplace-create-manage-feeds.md#deactivate-data-feed"> Désactivation du flux de données d’un abonné </a> </p> </td> 
-   <td colname="col2"> <p>Décrit comment les fournisseurs de données <span class="wintitle"> d’Audience Marketplace</span> désactivent le flux d’un abonné. </p> </td> 
+   <td colname="col2"> <p>Décrit comment <span class="wintitle"> Audience Marketplace</span> les fournisseurs de données désactivent le flux d’un abonné. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-manage-subscriptions.md">Que se passe-t-il une fois qu’un fournisseur désactive mon flux de données ?</a> </p> </td> 
-   <td colname="col2"> <p>Décrit ce à quoi un acheteur de données <span class="wintitle"> d’Audience Marketplace</span> peut s’attendre si un fournisseur révoque l’accès à un flux de données. </p> </td> 
+   <td colname="col2"> <p>Décrit ce à quoi peut s’attendre un acheteur de données <span class="wintitle"> Audience Marketplace</span> si un fournisseur révoque l’accès à un flux de données. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/dcs-intro/dcs-api-reference/dcs-error-codes.md"> Codes, messages et exemples d’erreur des serveurs de collecte de données </a> </p> </td> 
@@ -403,7 +403,7 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <a href="../api/rest-api-main/aam-api-getting-started.md#oauth"> Authentification OAuth </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../api/rest-api-main/aam-api-getting-started.md#oauth"> Authentification OAuth  </a> </p> </td> 
    <td colname="col2"> <p>Lien Ajouté pour l’authentification autorisée et implicite. </p> </td> 
   </tr> 
   <tr> 
@@ -420,22 +420,22 @@ liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/dcs-intro/dcs-s2s/dcs-s2s-calls.md"> Lancement d’appels d’API DCS serveur à serveur</a> </p> </td> 
-   <td colname="col2" morerows="1"> <p>Révision du texte pour inclure la <code> d_mid</code> variable. </p> </td> 
+   <td colname="col2" morerows="1"> <p>Texte révisé pour inclure la variable <code> d_mid</code>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/dcs-intro/dcs-api-reference/dcs-keys.md"> Attributs pris en charge pour les appels de l’API DCS</a> </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/media-data-integration/impression-data-pixels.md"> Capture des données d’impression de campagne via des appels de pixel </a> </p> </td> 
-   <td colname="col2"> <p>Ajouté de nouvelles entrées de clé et de macro pour <code> d_mid</code> et <code> d_region</code>. </p> </td> 
+   <td colname="col2"> <p>Nouvelles entrées de clé et de macro Ajoutées pour <code> d_mid</code> et <code> d_region</code>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/metadata-files-intro/datafiles-intro.md"> Fichiers de données pour les rapports d’optimisation d’Audience</a> </p> </td> 
-   <td colname="col2"> <p>Nouvelle description Ajoutée pour le <span class="wintitle"> Type d'événement</span>. </p> </td> 
+   <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/metadata-files-intro/datafiles-intro.md"> Fichiers de données pour les rapports d’Audience Optimization</a> </p> </td> 
+   <td colname="col2"> <p>Nouvelle description Ajoutée pour <span class="wintitle"> Type d'événement</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-providers/marketplace-billing-report.md">Présentation du rapport de facturation des fournisseurs de données</a> (en anglais) </p> </td> 
-   <td colname="col2"> <p>Nouvelle documentation qui liste et définit les éléments dans un rapport de facturation <span class="wintitle"> d'Audience Marketplace</span> . </p> </td> 
+   <td colname="col2"> <p>Nouvelle documentation qui liste et définit les éléments dans un rapport de facturation <span class="wintitle"> Audience Marketplace</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/segments/segment-builder-data.md">Données sur la taille de segment et les caractéristiques dans le créateur de segments</a> (en anglais) </p> </td> 
